--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -17,6 +17,8 @@
     "node": "^16.1.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
-    "rate-limiter": "^0.2.0"
+    "rate-limiter": "^0.2.0",
+    "sequelize": "^6.6.2",
+    "tedious": "^11.0.8"
   }
 }
